feat: work with redis, using ACL
